# AAI-template

./: LICENSE  README.md  benchmark_history.jsonl  pyproject.toml
tests/: test_main.py
tools/: fix-project
